objects/Point_of_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Point of Contact for</relationshipLabel>
        <relationshipName>Points_of_Contact1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point of Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point of Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Type_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Point of Contact Type Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Type__c</fullName>
        <label>Point of Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Point_of_Contact_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Point_of_Contact_for_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of Contact for Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Points of Contact</relationshipLabel>
        <relationshipName>Points_of_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_for__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of Contact for</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Points of Contact</relationshipLabel>
        <relationshipName>Points_of_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Point of Contact</label>
    <nameField>
        <displayFormat>POC-{00000}</displayFormat>
        <label>Point of Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points of Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>